# $Id$

2008-07-20	Ivan Y. Khvostishkov

	* core/Base/IntervalUnit.class.php: helper for time intervals, very
	useful for OLAP.

2008-07-29	Sergey S. Sergeev

	* core/Form/Primitives/PrimitiveIdentifierList.class.php,
	core/Form/Primitives/PrimitiveArray.class.php: fixed check conditions.

2008-07-28	Sergey S. Sergeev

	* main/DAOs/ProtoDAO.class.php: fixed {get,fill,fetch} collections
	by Criteria. Thanks to Konstantin V. Arkhipov.

2008-07-18	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveTimestampRange.class.php: new
	primitive introduced.

2008-07-24	Denis M. Gabaidulin

	* main/Base/AbstractProtoClass.class.php: isPropertyExists method added.

2008-07-24	Dmitry V. Sokolov

	* main/Flow/ControllersCollection.class.php: now handle request
	from active Controller firstly.

2008-07-18	Konstantin V. Arkhipov

	* core/Cache/Memcached.class.php: now does not serialize strings.

2008-07-17	Konstantin V. Arkhipov

	* main/DAOs/GenericDAO.class.php: sanity checks added to dropById()
	and dropByIds().

2008-07-15	Konstantin V. Arkhipov

	* main/DAOs/Workers/CacheDaoWorker.class.php: new scalable voodoo-like
	dao worker.

	* core/Cache/: increment/decrement implemented in all CachePeer's.

2008-07-14	Konstantin V. Arkhipov

	* main/DAOs/Workers/CommonDaoWorker.class.php: trivial getListByIds()
	optimization - now fetches only unique objects.

2008-07-13	Konstantin V. Arkhipov

	* main/Base/, main/DAOs/: experimental encapsulant's prefetching
	implemented.

2008-07-09	Ivan Y. Khvostishkov

	* main/Net/Ip/IpAddress.class.php: fixed construction checking for
	ip2long() result. Added toSignedInt() - like ip2long(), but suitable
	for both 32 and 64 bit archs.  Thanks to Evgeny V. Kokovikhin
	<dovg@dovg.ru>.

2008-06-19	Ivan Y. Khvostishkov

	* main/UnifiedContainer/UnifiedContainer.class.php: mergeList() should
	not override clones, so save() can store new list.

	* core/Form/Filters/Stringizer.class.php: cool filter to convert