@@ -172,6 +172,14 @@
 				);
 		}
 		
+		public static function isNotEqual($first, $second, $message = null)
+		{
+			if ($first == $second)
+				throw new WrongArgumentException(
+					$message.', '.self::dumpOppositeArguments($first, $second)
+				);
+		}
+		
 		public static function isTypelessEqual($first, $second, $message = null)
 		{
 			if ($first != $second)
